--- a/TODO
+++ b/TODO
@@ -1,8 +1,9 @@
 TODO
 
+✅store date added in job table
 cronjob to remove stale jobs and add new jobs
-store date added in job table
-date sort on UI
+
+✅date sort on UI
 store keywords or full description in job table
 store number of questions in application
     determine if it is easy apply
